<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lotte.dengronnecafe.Topsongs"
    android:background="@drawable/backgroundcafe">

    <TextView
        android:id="@+id/headline_mp"
        android:textAllCaps="true"
        style="@style/textHeadline"
        android:text="@string/mp_headline"
        android:textSize="45sp"
        android:paddingTop="10dp"
        />

    <TextView
        android:id="@+id/text1_mp"
        style="@style/simpletext"
        android:text="@string/mp_description"
        android:layout_below="@+id/headline_mp"/>

    <Button
        android:layout_width="match_parent"
        style="@style/buttonStartBig"
        android:onClick="start_song"
        android:text="@string/mp_play"
        android:layout_above="@+id/mp_buttons" />


    <LinearLayout
        android:id="@+id/mp_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="120dp">
        <Button
            android:layout_width="100dp"
            style="@style/buttonStartBig"
            android:onClick="prev_song"
            android:text="@string/mp_prev" />

        <Button
            android:layout_width="130dp"
            style="@style/buttonStartBig"
            android:onClick="stop_song"
            android:text="@string/mp_stop"
            />

        <Button
            android:layout_width="100dp"
            style="@style/buttonStartBig"
            android:onClick="next_song"
            android:text="@string/mp_next" />
    </LinearLayout>



    <TextView
        android:id="@+id/now_playing_desc"
        style="@style/simpletext"
        android:text="@string/mp_playing"
        android:layout_below="@+id/mp_buttons"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/now_playing"
        style="@style/simpletext"
        android:text="@string/mp_songname"
        android:layout_below="@+id/now_playing_desc"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
