<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lotte.dengronnecafe.Start"
    android:background="@drawable/backgroundcafe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout"
        android:layout_centerInParent="true">

        <Button
            style="@style/buttonStartBig"
            android:text="@string/start_menu"
            android:onClick="click_menu" />

        <Button
            style="@style/buttonStartBig"
            android:text="@string/start_dessert"
            android:onClick="click_dessert"
            />

        <Button
            style="@style/buttonStartBig"
            android:text="@string/start_profile"
            android:onClick="click_profilemember"
            />

        <Button
            android:id="@+id/start_about"
            style="@style/buttonStartBig"
            android:text="@string/start_about"
            android:onClick="click_about"
            />
        <Button
            android:id="@+id/start_map"
            style="@style/buttonStartBig"
            android:text="@string/start_map"
            android:onClick="click_find"
            />
        <Button
            android:id="@+id/start_test"
            style="@style/buttonStartBig"
            android:text="@string/start_test"
            android:onClick="click_music"
            />

    </LinearLayout>
</RelativeLayout>
