<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lotte.dengronnecafe.Event"
    android:background="@drawable/backgroundcafe">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout1">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_date"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/edit_time"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/event_textorder"
            android:paddingTop="10dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/spinner_menu"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"/>
    </LinearLayout>

        <Button
            android:id="@+id/but_friend"
            style="@style/Startbutton"
            android:text="@string/event_but_friend"
            android:onClick="invite_friend"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/findcontact_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_friendname"
            android:textSize="20sp"
            android:layout_alignBottom="@+id/but_friend"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_alignEnd="@+id/linearLayout1" />

        <Button
            style="@style/Startbutton"
            android:text="@string/event_save"
            android:onClick="eventSave"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />



</RelativeLayout>
